@@ -1,9 +1,11 @@
+
 package org.example;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 
 import java.net.*;
+import java.nio.charset.StandardCharsets;
 
 public class Query {
     URL url;
@@ -12,8 +14,7 @@ public class Query {
             BufferedReader reader = new BufferedReader(new InputStreamReader(System.in));
             System.out.println("Ввидите тему статьи");
             String query = reader.readLine();
-            query = URLEncoder.encode(query, "UTF-8");
-            reader.close();
+            query = URLEncoder.encode(query, StandardCharsets.UTF_8);
             String urlString = "https://ru.wikipedia.org/w/api.php?action=query&list=search&srsearch=" + query + "&format=json";
             this.url = new URL(urlString);
         }
